src/parser/exprParser.java
// Generated from expr.g4 by ANTLR 4.9.2

    package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class exprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		STRING_CONSTANT=39, INTEGER_CONSTANT=40, IDENTIFIER=41, COMMENT=42, LINE_COMMENT=43, 
		WS=44;
	public static final int
		RULE_program = 0, RULE_instr = 1, RULE_boolean_expr = 2, RULE_binary_expr = 3, 
		RULE_add = 4, RULE_multiply = 5, RULE_expression = 6, RULE_lValue = 7, 
		RULE_lValue_bis = 8, RULE_ifThenExpr = 9, RULE_ifThenElseExpr = 10, RULE_if_statement = 11, 
		RULE_then_statement = 12, RULE_else_statement = 13, RULE_forExpr = 14, 
		RULE_initialization = 15, RULE_termination = 16, RULE_whileExpr = 17, 
		RULE_letExpr = 18, RULE_declarations = 19, RULE_instr_list = 20, RULE_decl_list = 21, 
		RULE_variableDecla = 22, RULE_functionDecla = 23, RULE_typeDecla = 24, 
		RULE_type = 25, RULE_field_list = 26, RULE_field_def = 27, RULE_field_use = 28, 
		RULE_arrayDecla = 29, RULE_recordDecla = 30, RULE_affectation = 31, RULE_negation = 32, 
		RULE_callExpr = 33, RULE_bloc = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "instr", "boolean_expr", "binary_expr", "add", "multiply", 
			"expression", "lValue", "lValue_bis", "ifThenExpr", "ifThenElseExpr", 
			"if_statement", "then_statement", "else_statement", "forExpr", "initialization", 
			"termination", "whileExpr", "letExpr", "declarations", "instr_list", 
			"decl_list", "variableDecla", "functionDecla", "typeDecla", "type", "field_list", 
			"field_def", "field_use", "arrayDecla", "recordDecla", "affectation", 
			"negation", "callExpr", "bloc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'&'", "'|'", "'='", "'<>'", "'>'", "'<'", "'<='", "'>='", "'+'", 
			"'-'", "'*'", "'/'", "'('", "')'", "'.'", "'['", "']'", "'if'", "'then'", 
			"'else'", "'for'", "'to'", "'do'", "':='", "'while'", "'let'", "'in'", 
			"'end'", "';'", "'var'", "':'", "'function'", "'type'", "'array'", "'of'", 
			"'{'", "'}'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "STRING_CONSTANT", "INTEGER_CONSTANT", "IDENTIFIER", 
			"COMMENT", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public exprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrgrmContext extends ProgramContext {
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public TerminalNode EOF() { return getToken(exprParser.EOF, 0); }
		public PrgrmContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitPrgrm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			_localctx = new PrgrmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			instr();
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstrContext extends ParserRuleContext {
		public InstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instr; }
	 
		public InstrContext() { }
		public void copyFrom(InstrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expr_boolean_exprContext extends InstrContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public Expr_boolean_exprContext(InstrContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpr_boolean_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstrContext instr() throws RecognitionException {
		InstrContext _localctx = new InstrContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instr);
		try {
			_localctx = new Expr_boolean_exprContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			boolean_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Boolean_exprContext extends ParserRuleContext {
		public Boolean_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_expr; }
	 
		public Boolean_exprContext() { }
		public void copyFrom(Boolean_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Boolean_expr_operationContext extends Boolean_exprContext {
		public Binary_exprContext binary_expr() {
			return getRuleContext(Binary_exprContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public Boolean_expr_operationContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitBoolean_expr_operation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Boolean_expr_loopContext extends Boolean_exprContext {
		public Binary_exprContext binary_expr() {
			return getRuleContext(Binary_exprContext.class,0);
		}
		public Boolean_expr_loopContext(Boolean_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitBoolean_expr_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Boolean_exprContext boolean_expr() throws RecognitionException {
		Boolean_exprContext _localctx = new Boolean_exprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_boolean_expr);
		int _la;
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new Boolean_expr_loopContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				binary_expr();
				}
				break;
			case 2:
				_localctx = new Boolean_expr_operationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				binary_expr();
				setState(77);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(78);
				instr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_exprContext extends ParserRuleContext {
		public Binary_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_expr; }
	 
		public Binary_exprContext() { }
		public void copyFrom(Binary_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Binary_expr_operationContext extends Binary_exprContext {
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public Binary_expr_operationContext(Binary_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitBinary_expr_operation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Binary_expr_loopContext extends Binary_exprContext {
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public Binary_expr_loopContext(Binary_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitBinary_expr_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Binary_exprContext binary_expr() throws RecognitionException {
		Binary_exprContext _localctx = new Binary_exprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_binary_expr);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Binary_expr_loopContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				add();
				}
				break;
			case 2:
				_localctx = new Binary_expr_operationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				add();
				setState(84);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(85);
				instr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	 
		public AddContext() { }
		public void copyFrom(AddContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Add_expr_operationContext extends AddContext {
		public MultiplyContext multiply() {
			return getRuleContext(MultiplyContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public Add_expr_operationContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitAdd_expr_operation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Add_expr_loopContext extends AddContext {
		public MultiplyContext multiply() {
			return getRuleContext(MultiplyContext.class,0);
		}
		public Add_expr_loopContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitAdd_expr_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_add);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new Add_expr_loopContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				multiply();
				}
				break;
			case 2:
				_localctx = new Add_expr_operationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				multiply();
				setState(91);
				_la = _input.LA(1);
				if ( !(_la==T__8 || _la==T__9) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(92);
				instr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplyContext extends ParserRuleContext {
		public MultiplyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiply; }
	 
		public MultiplyContext() { }
		public void copyFrom(MultiplyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Multiply_expr_operationContext extends MultiplyContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InstrContext instr() {
			return getRuleContext(InstrContext.class,0);
		}
		public Multiply_expr_operationContext(MultiplyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitMultiply_expr_operation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Multiply_expr_loopContext extends MultiplyContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Multiply_expr_loopContext(MultiplyContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitMultiply_expr_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplyContext multiply() throws RecognitionException {
		MultiplyContext _localctx = new MultiplyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multiply);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new Multiply_expr_loopContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				expression();
				}
				break;
			case 2:
				_localctx = new Multiply_expr_operationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				expression();
				setState(98);
				_la = _input.LA(1);
				if ( !(_la==T__10 || _la==T__11) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(99);
				instr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expression_letContext extends ExpressionContext {
		public LetExprContext letExpr() {
			return getRuleContext(LetExprContext.class,0);
		}
		public Expression_letContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_let(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_string_constantContext extends ExpressionContext {
		public TerminalNode STRING_CONSTANT() { return getToken(exprParser.STRING_CONSTANT, 0); }
		public Expression_string_constantContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_string_constant(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_affectationContext extends ExpressionContext {
		public AffectationContext affectation() {
			return getRuleContext(AffectationContext.class,0);
		}
		public Expression_affectationContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_affectation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_function_callContext extends ExpressionContext {
		public CallExprContext callExpr() {
			return getRuleContext(CallExprContext.class,0);
		}
		public Expression_function_callContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_function_call(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_if_then_elseContext extends ExpressionContext {
		public IfThenElseExprContext ifThenElseExpr() {
			return getRuleContext(IfThenElseExprContext.class,0);
		}
		public Expression_if_then_elseContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_if_then_else(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_blocContext extends ExpressionContext {
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public Expression_blocContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_bloc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_integer_constantContext extends ExpressionContext {
		public TerminalNode INTEGER_CONSTANT() { return getToken(exprParser.INTEGER_CONSTANT, 0); }
		public Expression_integer_constantContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_integer_constant(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_decl_recordContext extends ExpressionContext {
		public RecordDeclaContext recordDecla() {
			return getRuleContext(RecordDeclaContext.class,0);
		}
		public Expression_decl_recordContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_decl_record(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_if_thenContext extends ExpressionContext {
		public IfThenExprContext ifThenExpr() {
			return getRuleContext(IfThenExprContext.class,0);
		}
		public Expression_if_thenContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_if_then(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_forContext extends ExpressionContext {
		public ForExprContext forExpr() {
			return getRuleContext(ForExprContext.class,0);
		}
		public Expression_forContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_for(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_decl_arrayContext extends ExpressionContext {
		public ArrayDeclaContext arrayDecla() {
			return getRuleContext(ArrayDeclaContext.class,0);
		}
		public Expression_decl_arrayContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_decl_array(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_lvalueContext extends ExpressionContext {
		public LValueContext lValue() {
			return getRuleContext(LValueContext.class,0);
		}
		public Expression_lvalueContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_lvalue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_whileContext extends ExpressionContext {
		public WhileExprContext whileExpr() {
			return getRuleContext(WhileExprContext.class,0);
		}
		public Expression_whileContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_while(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expression_negateContext extends ExpressionContext {
		public NegationContext negation() {
			return getRuleContext(NegationContext.class,0);
		}
		public Expression_negateContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof exprVisitor ) return ((exprVisitor<? extends T>)visitor).visitExpression_negate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expression);
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new Expression_lvalueContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				lValue();
				}
				break;
			case 2:
				_localctx = new Expression_if_then_elseContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				ifThenElseExpr();
				}
				break;
			case 3:
				_localctx = new Expression_if_thenContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				ifThenExpr();
				}
				break;
			case 4:
				_localctx = new Expression_forContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				forExpr();
				}
				break;
			case 5:
				_localctx = new Expression_whileContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				whileExpr();
				}
				break;
			case 6:
				_localctx = new Expression_letContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(108);
				letExpr();
				}
				break;
			case 7:
				_localctx = new Expression_decl_arrayContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(109);
				arrayDecla();
				}
				break;
			case 8:
				_localctx = new Expression_decl_recordContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(110);
				recordDecla();
				}
				break;
			case 9:
				_localctx = new Expression_affectationContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(111);
				affectation();
				}
				break;
			case 10:
				_localctx = new Expression_blocContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(112);
				match(T__12);
				setState(113);
				bloc();
				setState(114);
				match(T__13);
				}
				break;
			case 11:
				_localctx = new Expression_negateContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(116);
				negation();
				}
				break;
			case 12:
				_localctx = new Expression_function_callContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(117);
				callExpr();
				}
				break;
			case 13:
				_localctx = new Expression_string_constantContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(118);
				match(STRING_CONSTANT);
				}
				break;
			case 14:
				_localctx = new Expression_integer_constantContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(119);
				match(INTEGER_CONSTANT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
